--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -9,42 +9,41 @@
         
         <div class="form-group">
             <label for="firstname">Firstname</label>
-            <input type="text" class="form-control" name="firstname">
+            <input type="text" class="form-control" name="firstname" required>
         </div>
 
         <div class="form-group">
             <label for="lastname">Lastname</label>
-            <input type="text" class="form-control" name="lastname">
+            <input type="text" class="form-control" name="lastname" required>
         </div>
         
         <div class="form-group">
             <label for="gender">Gender</label>
-             <select name="cars" id="cars">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="female">Other</option>
+             <select name="gender-list">
+                <option value="male" name="male">Male</option>
+                <option value="female" name="female">Female</option>
+                <option value="other" name="other">Other</option>
              </select>
         </div>
-        
 
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" name="username">
+            <input type="text" class="form-control" name="username" required>
         </div>
 
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" name="password">
+            <input type="password" class="form-control" name="password" required>
         </div>
 
         <div class="form-group">
             <label for="email">Confirm Password</label>
-            <input type="password" class="form-control" name="confirmPassw">
+            <input type="password" class="form-control" name="confirmPassw" required>
         </div>
 
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" class="form-control" name="email">
+            <input type="text" class="form-control" name="email" required>
         </div>
 
         <div class="form-group">
