--- a/public/css/global-nav.css
+++ b/public/css/global-nav.css
@@ -1,3 +1,7 @@
+:root {
+    --font: #333;
+  }
+
 .nav-box {
     width: 100%;
     height: 60px;
@@ -6,8 +10,9 @@
 .navbar {
     position: fixed;
     width: 100%;
-    z-index: 1000;
-
+    z-index: 8000;
+    background-color: #fff;
+    box-shadow: 0 -10px 10px #000000;
 }
 
 .top-navbar {
@@ -24,50 +29,47 @@
     margin: 0 0 0 80px;
     height: 35px;
     width: 35px;
-    border: 2px solid #333333;
+    border: 2px solid var(--font);
     border-radius: 50%;
 }
 
 .nav-right-component {
     padding: 0 80px 0 0;
     display: flex;
+    align-items: center;
+    font-size: 1.10rem;
+    color: #636363;
 }
 
-.blog-type-text {
-    color: #fff;
-    margin: 0 15px 0 15px;
+.nav-right-component-home-tag {
+    color: #636363;
+    font-size: 1.10rem;
+    margin-right: 30px;
 }
-.blog-type-text:hover {
-    color: #8bcdf7;
+
+.nav-right-component-home-tag:hover {
+    color: #2997db;
+    outline: none;
     cursor: pointer;
 }
 
 .nav-login-component {
-    background-color: #8f8f8f;
-    border: 1px solid  #8f8f8f;
-    border-radius: 20px;
-    padding: 5px 15px;
+    font-size: 1.10rem;
     margin: 0;
-    font-size: 1.15rem;
-    color: #fff;
-    outline: none;
+    color: #636363;
 }
 
 .nav-login-component:hover {
-    background-color: #fff;
-    border-radius: 20px;
-    padding: 5px 15px;
-    margin: 0;
-    font-size: 1.15rem;
-    color: #8f8f8f;
+    font-size: 1.10rem;
+    color: #2997db;
     outline: none;
     cursor: pointer;
 }
 
 .bottom-navbar {
-    background-color: #434343;
+    /* background-color: #434343; */
     width: inherit;
-    height: 24px;
+    height: 0px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,8 +79,55 @@
     display: flex;
 }
 
-
 .box {
     height: 1000px;
     width: 100%;
 }
+
+.dropbtn {
+    background-color: inherit;
+    color: #636363;
+    border: none;
+    cursor: pointer;
+    font-size: 1.10rem;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin-right: 80px;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: #000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+      background-color: #f1f1f1;
+    }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+    color: #2997db;
+    outline: none;
+    
+  }
+  .dropbtn:focus {
+    outline: none;
+  }
