db-test-ได้แล้วเย้

--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -19,11 +19,11 @@
         
         <div class="form-group">
             <label for="gender">Gender</label>
-             <select name="gender-list">
-                <option value="male" name="male">Male</option>
-                <option value="female" name="female">Female</option>
-                <option value="other" name="other">Other</option>
-             </select>
+            <input type="text" class="form-control" name="gender" required>
+        </div>
+        <div class="form-group">
+            <label for="lastname">Age</label>
+            <input type="number" class="form-control" name="age" required>
         </div>
 
         <div class="form-group">
