--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -3,5 +3,72 @@
     {{style("css/home")}}
 @endsection
 @section("content")
+    <img class="show-image"src="https://wallpaperaccess.com/full/2906429.jpg" >
+    <div class="articles-block" >
+        <div class="type-articles-block">
+            <div class="articles-lebel">
+                Latest Articles
+            </div>
+            <div class="news-component">
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://assets.hongkiat.com/uploads/minimalist-dekstop-wallpapers/4k/original/14.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://assets.hongkiat.com/uploads/minimalist-dekstop-wallpapers/4k/original/14.jpg" >
+                    <div class="news-content-lebel">
+                        I'm in love with your body
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://assets.hongkiat.com/uploads/minimalist-dekstop-wallpapers/4k/original/14.jpg" >
+                    <div class="news-content-lebel">
+                        real wild life
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://assets.hongkiat.com/uploads/minimalist-dekstop-wallpapers/4k/original/14.jpg" >
+                    <div class="news-content-lebel">
+                        I really like this po
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://assets.hongkiat.com/uploads/minimalist-dekstop-wallpapers/4k/original/14.jpg" >
+                    <div class="news-content-lebel">
+                        dont try love me
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://assets.hongkiat.com/uploads/minimalist-dekstop-wallpapers/4k/original/14.jpg" >
+                    <div class="news-content-lebel">
+                        How dare you
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>    
+
+    
     <div class="box"></div>
+    
 @endsection
