--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -1,10 +1,15 @@
-</head>
-<body>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <div class="fb-root">
         <div id="fb-root"></div>
-        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v8.0&appId=1120643878329329&autoLogAppEvents=1" nonce="FMeIVSpE"></script>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/th_TH/sdk.js
+        #xfbml=1&version=v8.0&appId=1120643878329329&autoLogAppEvents=1" nonce="FMeIVSpE"></script>
     </div>
-
     {{script("js/index")}}
 
     <script>
@@ -33,7 +38,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     @!section("style-section")
-    
     @include("global-css")
 </head>
 <body>
@@ -65,7 +69,7 @@
     <div class="nav-box"></div>
 
     <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v8.0&appId=632755014023180&autoLogAppEvents=1" nonce="yIwx0dA5"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v8.0&appId=632755014023180&autoLogAppEvents=1" nonce="yIwx0dA5"></script>
 
 
     @!section("content")
