--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,16 +8,26 @@
 }
 
 .articles-block {
-    margin: 150px 200px;
+    margin: 30px 15vw 100px 15vw;
 }
 
 .type-articles-block {
-
+    padding: 100px 0 0 0;
 }
 
 .articles-lebel {
+    
     font-size: 2.5rem;
     margin: 0 0 80px 0;
+    display: flex;
+}
+
+.line-article {
+    width: 110%;
+    margin: 7px 0 0 25px;
+    height: 20px;
+    background-color: #2997db;
+    border-radius: 15px;
 }
 
 .news-component {
@@ -26,8 +36,17 @@
 }
 
 .news-content-show {
-    margin: 3%;
+    padding: 3%;
     width: 255px;
+    height: 255px;
+    transition:  0.4s;
+    border-radius: 10px;
+}
+
+.news-content-show:hover {
+    background-color: #c7c7c7;
+    cursor: pointer;
+
 }
 
 .news-content-image {
