--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -7,7 +7,11 @@
     <div class="articles-block" >
         <div class="type-articles-block">
             <div class="articles-lebel">
-                Latest Articles
+                <div>
+                    Latest Articles <div class="line-article"></div>
+                </div>
+                
+                
             </div>
             <div class="news-component">
                 <div class="news-content-show">
@@ -66,9 +70,258 @@
                 </div>
             </div>
         </div>
+        <div class="type-articles-block">
+            <div class="articles-lebel">
+                <div>
+                    World <div class="line-article"></div>
+                </div>
+            </div>
+            <div class="news-component">
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://wallup.net/wp-content/uploads/2017/11/23/506368-Earth-Moon-minimalism-stars-space-kurzgesagt-748x421.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://wallup.net/wp-content/uploads/2017/11/23/506368-Earth-Moon-minimalism-stars-space-kurzgesagt-748x421.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://wallup.net/wp-content/uploads/2017/11/23/506368-Earth-Moon-minimalism-stars-space-kurzgesagt-748x421.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://wallup.net/wp-content/uploads/2017/11/23/506368-Earth-Moon-minimalism-stars-space-kurzgesagt-748x421.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://wallup.net/wp-content/uploads/2017/11/23/506368-Earth-Moon-minimalism-stars-space-kurzgesagt-748x421.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://wallup.net/wp-content/uploads/2017/11/23/506368-Earth-Moon-minimalism-stars-space-kurzgesagt-748x421.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="type-articles-block">
+            <div class="articles-lebel">
+                <div>
+                    Tech <div class="line-article"></div>
+                </div>
+            </div>
+            <div class="news-component">
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/33/95/75/33957573bdb5c562fa3ddad76867e0ac.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/33/95/75/33957573bdb5c562fa3ddad76867e0ac.jpg" >
+                    <div class="news-content-lebel">
+                        I'm in love with your body
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/33/95/75/33957573bdb5c562fa3ddad76867e0ac.jpg" >
+                    <div class="news-content-lebel">
+                        real wild life
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/33/95/75/33957573bdb5c562fa3ddad76867e0ac.jpg" >
+                    <div class="news-content-lebel">
+                        I really like this po
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/33/95/75/33957573bdb5c562fa3ddad76867e0ac.jpg" >
+                    <div class="news-content-lebel">
+                        dont try love me
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/33/95/75/33957573bdb5c562fa3ddad76867e0ac.jpg" >
+                    <div class="news-content-lebel">
+                        How dare you
+                    </div>
+                    <div class="news-content-date">
+                        8-28-2019
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="type-articles-block">
+            <div class="articles-lebel">
+                <div>
+                    Sci <div class="line-article"></div>
+                </div>
+            </div>
+            <div class="news-component">
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="type-articles-block">
+            <div class="articles-lebel">
+                <div>
+                    World <div class="line-article"></div>
+                </div>
+            </div>
+            <div class="news-component">
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://c1.wallpaperflare.com/preview/874/965/110/black-business-computer-desk.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://c1.wallpaperflare.com/preview/874/965/110/black-business-computer-desk.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://c1.wallpaperflare.com/preview/874/965/110/black-business-computer-desk.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://c1.wallpaperflare.com/preview/874/965/110/black-business-computer-desk.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://c1.wallpaperflare.com/preview/874/965/110/black-business-computer-desk.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+                <div class="news-content-show">
+                    <img class="news-content-image"src="https://c1.wallpaperflare.com/preview/874/965/110/black-business-computer-desk.jpg" >
+                    <div class="news-content-lebel">
+                        Lorem Ipsum
+                    </div>
+                    <div class="news-content-date">
+                        10-28-2019
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>    
-
-    
-    <div class="box"></div>
     
 @endsection
