--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -50,7 +50,7 @@
                     Home
                 </div>
                 <div class="dropdown">
-                    <button class="dropbtn">Categories <i class="fas fa-angle-down"></i> </button>
+                    <div class="dropbtn">Categories   <i class="fas fa-angle-down"></i> </div>
                     <div class="dropdown-content">
                         <a href="#">Wolrd</a>
                         <a href="#">Tech</a>
@@ -58,8 +58,12 @@
                         <a href="#">Business</a>
                     </div>
                 </div>
+                <div class="nav-icon-block">
+                    <i class="fab fa-facebook nav-icon"></i>
+                    <i class="fab fa-instagram nav-icon"></i>
+                </div>
                 <div class="nav-login-component">
-                    Login
+                    Login <i class="fas fa-sign-in-alt"></i>
                 </div>   
             </div>
         </div> 
