--- a/public/css/global-nav.css
+++ b/public/css/global-nav.css
@@ -12,7 +12,7 @@
     width: 100%;
     z-index: 8000;
     background-color: #fff;
-    box-shadow: 0 -10px 10px #000000;
+    box-shadow: 0 -10px 15px #000000;
 }
 
 .top-navbar {
@@ -26,7 +26,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 0 0 80px;
+    margin: 0 0 0 90px;
     height: 35px;
     width: 35px;
     border: 2px solid var(--font);
@@ -34,16 +34,14 @@
 }
 
 .nav-right-component {
-    padding: 0 80px 0 0;
+    padding: 0 50px 0 0;
     display: flex;
     align-items: center;
-    font-size: 1.10rem;
+    font-size: 1rem;
     color: #636363;
 }
 
 .nav-right-component-home-tag {
-    color: #636363;
-    font-size: 1.10rem;
     margin-right: 30px;
 }
 
@@ -53,14 +51,35 @@
     cursor: pointer;
 }
 
+.nav-icon-block {
+  margin-right: 20px;
+}
+
+.nav-icon {
+  margin: 0 8px;
+  height: auto;
+}
+
+.nav-icon:hover {
+  color: #2997db;
+  outline: none;
+  cursor: pointer;
+}
+
 .nav-login-component {
     font-size: 1.10rem;
     margin: 0;
-    color: #636363;
+    color: #fff;
+    background-color:#2997db;
+    border: 1px solid #2997db;
+    border-radius: 20px;
+    padding: 8px 15px;
 }
 
 .nav-login-component:hover {
     font-size: 1.10rem;
+    background-color: #fff;
+    border: 1px solid #2997db;
     color: #2997db;
     outline: none;
     cursor: pointer;
@@ -86,16 +105,15 @@
 
 .dropbtn {
     background-color: inherit;
-    color: #636363;
     border: none;
     cursor: pointer;
-    font-size: 1.10rem;
+    font-size: 1.0rem;
   }
   
   .dropdown {
     position: relative;
     display: inline-block;
-    margin-right: 80px;
+    margin-right: 60px;
   }
   
   .dropdown-content {
