--- a/resources/views/addnews.edge
+++ b/resources/views/addnews.edge
@@ -8,26 +8,26 @@
         {{csrfField()}}
         
         <div class="form-group">
-            <label for="newsCg">หมวดหมู่</label>
-            <input type="text" class="form-control" name="newsCg" required>
+            <label for="news_Cg">หมวดหมู่</label>
+            <input type="text" class="form-control" name="news_Cg" required>
         </div>
 
         <div class="form-group">
-            <label for="newsTopic">ชื่อข่าว</label>
-            <input type="text" class="form-control" name="newsTopic" required>
+            <label for="news_Topic">ชื่อข่าว</label>
+            <input type="text" class="form-control" name="news_Topic" required>
         </div>
 
         <div class="form-group">
-            <label for="newsContent">เนื้อหา</label>
+            <label for="news_Content">เนื้อหา</label>
             <span>
-                <textarea rows="2" cols="45" title="ข้อความ" name="newsContent" class="">
+                <textarea rows="2" cols="45" title="ข้อความ" name="news_Content" class="">
                 </textarea>
             </span>
         </div>
 
         <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" name="username" required>
+            <label for="news_Date">วันที่</label>
+            <input type="text" class="form-control" name="news_Date" required>
         </div>
 
         <div class="form-group">
