--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form-group">
-            <label for="email">Confirm Password</label>
+            <label for="confirmPassw">Confirm Password</label>
             <input type="password" class="form-control" name="confirmPassw" required>
         </div>
 
