update push form to login.edge

--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -7,15 +7,22 @@
         <div class="login-background">
             <div class="login-lebel">USER LOGIN</div>
             <div class="login-input-block">
-                <div class="input-lebel">USERNAME</div>
-                <input class="input" type="text">
-                <div class="input-lebel">PASSWORD</div>
-                <input class="input" type="text">
-                <div class="submit-block">
-                    <div class="login-submit">
-                        LOGIN
+                <form action="">
+                    <div class="input-lebel">
+                        USERNAME
                     </div>
-                </div>
+                    <input class="input" type="text">
+                    <div class="input-lebel">
+                        PASSWORD
+                    </div>
+                    <input class="input" type="text">
+                    <div class="submit-block">
+                        <div class="login-submit">
+                            LOGIN
+                        </div>
+                    </div>
+                </form>
+                
             </div>
             <div class="register-block">
                 <div class="register-component">Don't have an Account? </div><div class="register-component register-warb"> Register Now!</div>
