update hidden password to login

--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -11,11 +11,11 @@
                     <div class="input-lebel">
                         USERNAME
                     </div>
-                    <input class="input" type="text">
+                    <input class="input" type="username">
                     <div class="input-lebel">
                         PASSWORD
                     </div>
-                    <input class="input" type="text">
+                    <input class="input" type="password">
                     <div class="submit-block">
                         <div class="login-submit">
                             LOGIN
