--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -42,6 +42,9 @@
 </head>
 <body>
 
+    {{token}}
+    {{currentUsername}}
+
     <header class="navbar">
         <div class="top-navbar">
             <div class="nav-logo nav-left-component">logo</div>
@@ -64,7 +67,7 @@
                 </div>
                 <div class="nav-login-component">
                     Login <i class="fas fa-sign-in-alt"></i>
-                </div>   
+                </div>
             </div>
         </div> 
         
