--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -17,15 +17,15 @@
                     </div>
                     <input class="input" type="password">
                     <div class="submit-block">
-                        <div class="login-submit">
+                        <button class="login-submit">
                             LOGIN
-                        </div>
+                        </button>
                     </div>
                 </form>
                 
             </div>
             <div class="register-block">
-                <div class="register-component">Don't have an Account? </div><div class="register-component register-warb"> Register Now!</div>
+                <div class="register-component">Don't have an Account? </div><a class="register-component register-warb" href="/register"> Register Now!</a>
             </div>
         </div>
     </div>
