--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -1,55 +1,55 @@
 @layout('layout')
 @section("style-section")
-    {{style("css/login")}}
+    {{style("css/register")}}
 @endsection
 @section("content")
-    <div class="container">
-    <form action="{{route('/register')}}" method="POST">
-        {{csrfField()}}
-        
-        <div class="form-group">
-            <label for="firstname">Firstname</label>
-            <input type="text" class="form-control" name="firstname" required>
-        </div>
 
-        <div class="form-group">
-            <label for="lastname">Lastname</label>
-            <input type="text" class="form-control" name="lastname" required>
-        </div>
-        
-        <div class="form-group">
-            <label for="gender">Gender</label>
-            <input type="text" class="form-control" name="gender" required>
-        </div>
-        <div class="form-group">
-            <label for="lastname">Age</label>
-            <input type="number" class="form-control" name="age" required>
-        </div>
-
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" name="username" required>
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" name="password" required>
-        </div>
-
-        <div class="form-group">
-            <label for="confirmPassw">Confirm Password</label>
-            <input type="password" class="form-control" name="confirmPassw" required>
-        </div>
-
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" class="form-control" name="email" required>
-        </div>
-
-        <div class="form-group">
-            <button type="submit">Submit</button>
+<div class="register-block">
+    <div class="register-background">
+        <div class="register-lebel">REGISTER</div>
+        <div class="register-input-block">
+            <form action="{{route('/register')}}" method="POST">
+                {{csrfField()}}
+                <div class="input-lebel">
+                    FISTNAME
+                </div>
+                <input class="input" type="text">
+                <div class="input-lebel">
+                    LASTNAME
+                </div>
+                <input class="input" type="text">
+                <div class="input-lebel">
+                    GENDER
+                </div>
+                <div class="input-gender-block">
+                    <input class="input-gender" name="gender" type="radio"> Male <input class="input-gender" name="gender" type="radio"> Female
+                    <input class="input-gender" name="gender" type="radio"> Others
+                </div>
+                <div class="input-lebel">
+                    USERNAME
+                </div>
+                <input class="input" type="username">
+                <div class="input-lebel">
+                    PASSWORD
+                </div>
+                <input class="input" type="password">
+                <div class="input-lebel">
+                    CONFIRM-PASSWORD
+                </div>
+                <input class="input" type="password">
+                <div class="input-lebel">
+                    E-MAIL
+                </div>
+                <input class="input" type="email">
+                <div class="submit-block">
+                    <button class="register-submit">
+                        Register
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
+</div>
+
 @endsection
 
-{{--  form != from  --}}
