--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -13,11 +13,11 @@
                 <div class="input-lebel">
                     FISTNAME
                 </div>
-                <input class="input" type="text">
+                <input class="input" type="text" name="firstname">
                 <div class="input-lebel">
                     LASTNAME
                 </div>
-                <input class="input" type="text">
+                <input class="input" type="text" name="lastname">
                 <div class="input-lebel">
                     GENDER
                 </div>
@@ -26,13 +26,17 @@
                     <input class="input-gender" name="gender" type="radio"> Others
                 </div>
                 <div class="input-lebel">
+                    Age
+                </div>
+                <input class="input" type="number" name="age">
+                <div class="input-lebel">
                     USERNAME
                 </div>
-                <input class="input" type="username">
+                <input class="input" type="username" name="username">
                 <div class="input-lebel">
                     PASSWORD
                 </div>
-                <input class="input" type="password">
+                <input class="input" type="password" name="password">
                 <div class="input-lebel">
                     CONFIRM-PASSWORD
                 </div>
@@ -40,7 +44,7 @@
                 <div class="input-lebel">
                     E-MAIL
                 </div>
-                <input class="input" type="email">
+                <input class="input" type="email" name="email">
                 <div class="submit-block">
                     <button class="register-submit">
                         Register
