--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -26,7 +26,7 @@
                     <input class="input-gender" name="gender" type="radio"> Others
                 </div>
                 <div class="input-lebel">
-                    Age
+                    AGE
                 </div>
                 <input class="input" type="number" name="age">
                 <div class="input-lebel">
