--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -31,5 +31,10 @@
         </div>
     </div>
 
+    <fb:login-button 
+        scope="public_profile,email"
+        onlogin="checkLoginState();">
+    </fb:login-button>
+
    
 @endsection
