--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,18 +8,27 @@
 }
 
 .articles-block {
-    margin: 30px 15vw 100px 15vw;
+    width: 100%;
+    margin: 30px 0 100px 0;
+
+}
+
+.articles-label {
+    margin: 0 0 0 8%;
 }
 
 .type-articles-block {
-    padding: 100px 0 0 0;
+    margin: 100px 0 0 0;
 }
 
-.articles-lebel {
-    
+.articles-label-block {
     font-size: 2.5rem;
-    margin: 0 0 80px 0;
+    margin: 0 0 30px 0;
     display: flex;
+}
+
+.articles-label {
+    font-size: 2.5rem;
 }
 
 .line-article {
@@ -31,7 +40,9 @@
 }
 
 .news-component {
+    width: 100%;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
