update home link

--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -45,7 +45,7 @@
         <div class="top-navbar">
             <div class="nav-logo nav-left-component">logo</div>
             <div class="nav-right-component nav-component">
-                <a class="nav-right-component-home-tag">
+                <a class="nav-right-component-home-tag" href="/home">
                     Home
                 </a>
                 <div class="dropdown">
