--- a/public/css/home.css
+++ b/public/css/home.css
@@ -77,3 +77,33 @@
     margin: 12px 0 0 8px;
 }
 
+.slideshow-container {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+.slideshow-pictures img{
+    width: 100%;
+    height: auto;
+}
+.slideshow-button {
+    position: absolute;
+    visibility: hidden;
+}
+.navigation {
+    z-index: 1000;
+    position: absolute;
+    left: 12.5%;
+    top: 5%;
+    display: flex;
+    flex-direction: column;
+}
+.navigation-button {
+    transition: 0.4s ease-in-out;
+    background-color: rgba(255,255,255,0);
+    border: 1px solid white;
+    border-radius: 50%;
+    margin: 150%;
+    width: 20px;
+    height: 20px;
+}
