add href to each categories

--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -51,10 +51,10 @@
                 <div class="dropdown">
                     <div class="dropbtn">Categories   <i class="fas fa-angle-down"></i> </div>
                     <div class="dropdown-content">
-                        <a href="#">Wolrd</a>
-                        <a href="#">Tech</a>
-                        <a href="#">Sci</a>
-                        <a href="#">Business</a>
+                        <a href="./categories-world">Wolrd</a>
+                        <a href="./categories-tech">Tech</a>
+                        <a href="./categories-sci">Sci</a>
+                        <a href="./categories-business">Business</a>
                     </div>
                 </div>
                 <div class="nav-icon-block">
