add news_1 details

--- a/resources/views/news_1.edge
+++ b/resources/views/news_1.edge
@@ -10,5 +10,18 @@
             </h1>
             <div class="news-header-underline"></div>
         </div>
+        <div class="news-body">
+            <h2>
+                <p>นี่คงเป็นภาพที่เราไม่น่าจะมีโอกาสได้เห็นกันง่ายๆ และถ้าเลือกได้เราก็ขอไม่อยู่ในสถานการณ์นั้นจะดีกว่า เพราะนี่คือเรากำลังพูดถึงเหตุการณ์ ‘ปั๊มน้ำมันระเบิด’</p>
+                <p>เหตุการณ์นี้เกิดขึ้นที่เมืองวอลโกกราด ประเทศรัสเซีย เมื่อวันที่ 10 สิงหาคม 2020 ที่ผ่านมา จู่ๆ ปั๊มน้ำมันแห่งหนึ่งก็เกิดเพลิงไหม้ขึ้น ก่อนที่จะระเบิดจนกลายเป็นเพลิงรูปดอกเห็ด สร้างความตื่นตระหนกให้กับผู้พบเห็น</p>
+                <p>ภาพเหตุการณ์ที่เกิดขึ้น เวลาประมาณ 12.40น. (ตามเวลาท้องถิ่น)</p>
+                <img src="https://www.catdumb.tv/wp-content/uploads/2020/08/1-50.jpg">
+                <p>ทั้งนี้ก็มีผู้บาดเจ็บจำนวนทั้งสิ้น 13 ราย เข้าโรงพยาบาล 10 ราย และ 4 คนในนั้นคือนักดับเพลิง ทางด้านพนักงานของปั๊มน้ำมันก็สามารถหลบไปอยู่จุดที่ปลอดภัยได้ทัน ทำให้ไม่เป็นอะไร</p>
+                <p>ส่วนหนึ่งที่ทำให้ไม่มีผู้เสียชีวิตจากเหตุการณ์นี้ก็คงเป็นเพราะว่า ก่อนการระเบิดมันได้เกิดเปลวไฟขึ้นมาก่อน เป็นสัญญาณที่ทำให้คนโดยรอบหลบออกไปจากจุดเกิดเหตุได้อย่างทันท่วงที ทั้งนี้ก็ยังคงมีผู้บาดเจ็บสาหัส</p>
+                <p>Maxim Chertovy หนึ่งในนักดับเพลิง เล่าว่า…</p>
+                <h1><p>“ผมสัมผัสได้ถึงคลื่นระเบิดที่รุนแรงจนล้มลงไปกับพื้น เมื่อมองขึ้นมาผมก็ได้เห็นเปลวไฟลอยสูงขึ้นไปหลายเมตร”</p></h1>
+                <p>ที่มา : <a href="https://www.catdumb.tv/gas-station-blast-339/">https://www.catdumb.tv/gas-station-blast-339/</a></p>
+            </h2>
+        </div>
     </div>
 @endsection
