add header-underline margin-top

--- a/public/css/news.css
+++ b/public/css/news.css
@@ -8,6 +8,7 @@
     font-size: 3rem;
 }
 .news-header-underline {
+    margin-top: 2%;
     border-bottom: 5px solid black;
     margin-bottom: 2%;
 }
