--- a/public/css/home.css
+++ b/public/css/home.css
@@ -100,9 +100,8 @@
 
 .slideshow-outest-container {
     position: relative;
-    margin-left: 25vw;
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 90%;
     overflow: hidden;
 }
 .slideshow-container {
@@ -118,7 +117,6 @@
 }
 .slideshow-pictures img{
     width: 100%;
-    height: 100%;
 }
 .slideshow-button {
     position: absolute;
@@ -127,10 +125,11 @@
 .navigation {
     position: absolute;
     width: 100%;
+    height: 20%;
     z-index: 1000;
     display: flex;
     flex-direction: row;
-    top: 85%;
+    bottom: 3%;
     left: 32.25%;
 }
 .navigation-button {
@@ -138,7 +137,15 @@
     background-color: rgba(255,255,255,0);
     border: 1px solid white;
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     margin-left: 5%;
+}
+
+.navigation-button {
+    cursor: pointer;
+}
+
+.slideshow-pictures{
+    height: 90%;
 }
