--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -20,10 +20,10 @@
             </div>
             <div class="slideshow s1">
                 <div class="slideshow-pictures">
-                    <img src="./images/01.jpg" alt="">
-                    <img src="./images/02.jpg" alt="">
-                    <img src="./images/03.jpg" alt="">
-                    <img src="./images/04.jpg" alt="">
+                    <img src="./images/01.jpg" class="slide-image">
+                    <img src="./images/02.jpg" class="slide-image">
+                    <img src="./images/03.jpg" class="slide-image">
+                    <img src="./images/04.jpg" class="slide-image">
                 </div>
             </div>
         </div>
