update post to navbar

--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -45,11 +45,11 @@
         <div class="top-navbar">
             <div class="nav-logo nav-left-component">logo</div>
             <div class="nav-right-component nav-component">
-                <a class="nav-right-component-home-tag" href="/home">
+                <a class="nav-right-component-tag" href="/home">
                     Home
                 </a>
-                <div class="dropdown">
-                    <div class="dropbtn">Categories   <i class="fas fa-angle-down"></i> </div>
+                <div class="dropdown ">
+                    <div class="dropbtn nav-right-component-tag">Categories   <i class="fas fa-angle-down"></i> </div>
                     <div class="dropdown-content">
                         <a href="./categories-world">Wolrd</a>
                         <a href="./categories-tech">Tech</a>
@@ -57,6 +57,9 @@
                         <a href="./categories-business">Business</a>
                     </div>
                 </div>
+                <a class="nav-right-component-tag" href="/add-news">
+                    Post
+                </a>
                 <div class="nav-icon-block">
                     <a href="https://www.facebook.com/">
                         <i class="fab fa-facebook nav-icon"></i>
@@ -65,23 +68,26 @@
                         <i class="fab fa-instagram nav-icon"></i>
                     </a>
                 </div>
-                <form method="GET" action="{{'/layout'}}">
-                    {{ csrfField() }}
-                    @if(token == 0)
-                    <a class="nav-login-component" href="/login">
-                        Login <i class="fas fa-sign-in-alt"></i>
-                    </a>
-                    @elseif(token == 1)
-                    <div class="nav-user-logout-container">
-                        <div class="nav-user-layout">
-                            <h1>{{currentUsername}}</h1>
+                <div class="nav-login-block">
+                    <form method="GET" action="{{'/layout'}}">
+                        {{ csrfField() }}
+                        @if(token == 0)
+                        <a class="nav-login-component" href="/login">
+                            Login <i class="fas fa-sign-in-alt"></i>
+                        </a>
+                        @elseif(token == 1)
+                        <div class="nav-user-logout-container">
+                            <div class="nav-user-layout">
+                                <h1>{{currentUsername}}</h1>
+                            </div>
+                            <button type="submit" class="logout-submit">
+                                Logout
+                            </button>
                         </div>
-                        <button type="submit" class="logout-submit">
-                            Logout
-                        </button>
-                    </div>
-                    @endif
-                </form>
+                        @endif
+                    </form>
+                </div>
+                
             </div>
         </div> 
         
