--- a/public/css/global-nav.css
+++ b/public/css/global-nav.css
@@ -39,29 +39,26 @@ a {
 }
 
 .nav-right-component {
-    padding: 0 50px 0 0;
+
     display: flex;
     align-items: center;
     font-size: 1rem;
     color: #636363;
 }
 
-.nav-right-component-home-tag {
+.nav-right-component-tag {
     margin-right: 30px;
+    transition: 0.25s;
 }
 
-.nav-right-component-home-tag:hover {
+.nav-right-component-tag:hover {
     color: #2997db;
     outline: none;
     cursor: pointer;
 }
 
-.nav-icon-block {
-  margin-right: 20px;
-}
-
 .nav-icon {
-  margin: 0 8px;
+  margin: 0 7px;
   height: auto;
 }
 
@@ -69,6 +66,12 @@ a {
   color: #2997db;
   outline: none;
   cursor: pointer;
+}
+
+.nav-login-block {
+  width: 200px;
+  display: flex;
+  justify-content: center;
 }
 
 .nav-login-component {
@@ -114,12 +117,13 @@ a {
     border: none;
     cursor: pointer;
     font-size: 1.0rem;
+    margin-right: 30px;
   }
   
   .dropdown {
     position: relative;
     display: inline-block;
-    margin-right: 60px;
+   
   }
   
   .dropdown-content {
