--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -15,10 +15,10 @@
                 <div class="news-content-show">
                     <img class="news-content-image"src="https://assets.hongkiat.com/uploads/minimalist-dekstop-wallpapers/4k/original/14.jpg" >
                     <div class="news-content-lebel">
-                        Lorem Ipsum
+                        {{ news_Topic }}
                     </div>
                     <div class="news-content-date">
-                        10-28-2019
+                        {{ news_Date }}
                     </div>
                 </div>
                 <div class="news-content-show">
