--- a/resources/views/addnews.edge
+++ b/resources/views/addnews.edge
@@ -4,7 +4,7 @@
 @endsection
 @section("content")
     <div class="container">
-        <form action="{{route('/register')}}" method="POST">
+        <form action="{{route('/addnews')}}" method="POST">
         {{csrfField()}}
         
         <div class="form-group">
