--- a/resources/views/add-news.edge
+++ b/resources/views/add-news.edge
@@ -19,10 +19,10 @@
                     CATEGORIES
                     <select class="input-inline" name="news_Cg" id="news_Cg">
                         <option value="">Categories</option>
-                        <option value="">Word</option>
-                        <option value="">Tech</option>
-                        <option value="">Sci</option>
-                        <option value="">Business</option>
+                        <option value="word">Word</option>
+                        <option value="tech">Tech</option>
+                        <option value="sci">Sci</option>
+                        <option value="business">Business</option>
                     </select>
                 </div>
                 <div class="input-lebel">
