update display news

--- a/resources/views/home.edge
+++ b/resources/views/home.edge
@@ -42,7 +42,7 @@
                         {{ news_Topic }}
                     </div>
                     <div class="news-content" >
-                        I would like to test so I test this block and you will see after this content is over width dddddddddddddd
+                        {{ news_Content }}
                     </div>
                     <div class="news-content-date">
                         {{ news_Date }}
