--- a/resources/views/add-news.edge
+++ b/resources/views/add-news.edge
@@ -19,7 +19,7 @@
                     CATEGORIES
                     <select class="input-inline" name="news_Cg" id="news_Cg">
                         <option value="">Categories</option>
-                        <option value="word">Word</option>
+                        <option value="world">World</option>
                         <option value="tech">Tech</option>
                         <option value="sci">Sci</option>
                         <option value="business">Business</option>
