--- a/resources/views/categories-business.edge
+++ b/resources/views/categories-business.edge
@@ -14,13 +14,13 @@
             <div class="news-content-show">
                 <img class="news-content-image"src="https://c1.wallpaperflare.com/preview/874/965/110/black-business-computer-desk.jpg" >
                 <div class="news-content-lebel">
-                    Lorem Ipsum
+                    {{ news_Topic }}
                 </div>
                 <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
+                    {{ news_Content }}
                 </div>
                 <div class="news-content-date">
-                    10-28-2019
+                    {{ news_Date }}
                 </div>
             </div>
             <div class="news-content-show">
