--- a/resources/views/categories-sci.edge
+++ b/resources/views/categories-sci.edge
@@ -14,13 +14,13 @@
             <div class="news-content-show">
                 <img class="news-content-image"src="https://i.pinimg.com/originals/2b/1d/96/2b1d96ad5ab089ffba2e1bf9ea6f75a7.jpg" >
                 <div class="news-content-lebel">
-                    Lorem Ipsum
+                    {{ news_Topic }}
                 </div>
                 <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
+                    {{ news_Content }}
                 </div>
                 <div class="news-content-date">
-                    10-28-2019
+                    {{ news_Date }}
                 </div>
             </div>
             <div class="news-content-show">
