--- a/resources/views/categories-world.edge
+++ b/resources/views/categories-world.edge
@@ -13,13 +13,13 @@
             <div class="news-content-show">
                 <img class="news-content-image"src="https://wallup.net/wp-content/uploads/2017/11/23/506368-Earth-Moon-minimalism-stars-space-kurzgesagt-748x421.jpg" >
                 <div class="news-content-lebel">
-                    Lorem Ipsum
+                    {{ news_Topic }}
                 </div>
                 <div class="news-content" >
-                    I would like to test so I test this block and you will see after this content is over width dddddddddddddd
+                    {{ news_Content }}
                 </div>
                 <div class="news-content-date">
-                    10-28-2019
+                    {{ news_Date }}
                 </div>
             </div>
             <div class="news-content-show">
